typescript/checker/tests/conformance/async/es6/asyncQualifiedReturnType_es6.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            141,
        ),
        hi: BytePos(
            142,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es6/asyncQualifiedReturnType_es6.ts:8:21
  |
8 | async function f(): X.MyPromise<void> {
  |                     ^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            139,
        ),
        hi: BytePos(
            158,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es6/asyncQualifiedReturnType_es6.ts:8:19
  |
8 | async function f(): X.MyPromise<void> {
  |                   ^^^^^^^^^^^^^^^^^^^

